<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Dark"
        android:layout_gravity="center_vertical"
        android:fitsSystemWindows="true"
        android:paddingTop="56dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:contentDescription="@string/app_image"
            android:src="@drawable/gym_logo3"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:text="@string/label_titulo_contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/titulo_size"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:text="@string/label_descripcion_contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/subtitulo_size"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/margin_title_subtitle"
            android:layout_gravity="center_horizontal" />


        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_email_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email" />

        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_reset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/button_sendemail"/>

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:autoLink="web"
            android:text="@string/label_contraseña"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>

</ScrollView>